@@ -1,0 +1,1 @@
+my.conf.file=confs.xml
