@@ -1,0 +1,6 @@
+<ivysettings>
+    <settings defaultResolver="ibiblio" />
+    <resolvers>
+        <ibiblio name="ibiblio" m2compatible="true" />
+    </resolvers>
+</ivysettings>
