@@ -27,6 +27,7 @@
 - FIX: Ivy settings file cannot be loaded via http url (IVYDE-218)
 - FIX: The workspace resolver doesn't resolve conflicts correctly (IVYDE-212)
 - FIX: dependency order not preserved causing failed builds (IVYDE-170)
+- FIX: Can not add a project specific property file when adding a library (IVYDE-228)
 
   version 2.0.0 final
 ==========================
